--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
+		"start": "node build/index.js",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.42",
 		"@sveltejs/kit": "next",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
+		"mdsvex": "^0.9.7",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.34.0",
-		"mdsvex": "^0.9.7"
+		"svelte": "^3.34.0"
 	},
 	"type": "module"
 }
